# EquipmentReserv

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  main.py  manage.py  pyproject.toml  requirements.txt  utils.py
.ebextensions/: django.config
.github/workflows/: deploy.yml
accounts/: models.py  tests.py  urls.py  views.py
accounts/migrations/: 0002_remove_profile_department_alter_profile_id.py
accounts/templates/accounts/: login.html  signup.html
mysite/: cron.py  settings.py  urls.py  wsgi.py
reservation/: admin.py  models.py  tests.py  views.py
reservation/migrations/: 0011_equipment_remove_reservation_room_type_alter_blog_id_and_more.py
reservation/templates/reservation/: base.html  home.html  myreservation.html  new.html
reservation/templatetags/: reservation_extras.py
